tests/models/struct/named/vec/fail/gt.rs
use dade::model;
#[model]
struct TestModel {
    #[field(gt = 2)]
    value: Vec<()>,
}
fn main() {}
