tests/models/struct/named/vec/fail/gt.stderr
error: Support condition is min_items, max_items, alias and validate
 --> tests/models/struct/named/vec/fail/gt.rs:5:5
  |
5 |     value: Vec<()>,
  |     ^^^^^
